@@ -6,6 +6,11 @@ A: yes, using ~/.ssh/config
 Host zenspider.textdriven.com
 	User zenspider
 
+A: Alternatively, you can do this within your recipes like so:
+
+  set :user, "fluffy_bunny"
+  set :domain, "#{user}@bunnyworld.com"
+
 Q: is there any way to speed up ssh connections?
 A: yes, add to your entry in ~/.ssh/config:
 
